fixing padding on mobile

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -294,6 +294,8 @@ footer {
     width: 50%;
     min-width: 328px;
     margin-top: 32px;
+    padding-left: 16px;
+    padding-right: 16px;
   }
   .footer {
     display: flex;
